# tracy.cpp

./: CMakeLists.txt  README.md  main.cpp  run.sh
include/: camera.hpp  hittable.hpp  hittable_list.hpp  image_writer.hpp  interval.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
include/base/: hittable.hpp  material.hpp
include/materials/: dielectric.hpp  lambertian.hpp  metal.hpp
src/: camera.cpp  hittable.cpp  hittable_list.cpp  image_writer.cpp  interval.cpp  ray.cpp  sphere.cpp
src/materials/: dielectric.cpp  lambertian.cpp  metal.cpp
